scripts_cnet/logs/clip_ft-4479597.out
=======================
Loading Anaconda Module...
Traceback (most recent call last):
  File "/scratch/users/oince22/vwsd/scripts_google/clip_ft_pred.py", line 10, in <module>
    from vwsd.data import VWSDDataModule as DataModule
  File "/kuacc/users/oince22/.conda/envs/vwsd/lib/python3.10/site-packages/vwsd-0.0.1-py3.10.egg/vwsd/data.py", line 17, in <module>
    from .util import process_path, clean_text, cnet2str
  File "/kuacc/users/oince22/.conda/envs/vwsd/lib/python3.10/site-packages/vwsd-0.0.1-py3.10.egg/vwsd/util.py", line 70
    cnet_context = "_".join(nl_context.split())
    ^
IndentationError: expected an indented block after function definition on line 69
